Discard builds folder to neutralize error

--- a/eas.json
+++ b/eas.json
@@ -9,10 +9,7 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal",
-      "android": {
-        "applicationArchivePath": "./builds/*.apk"
-      }
+      "distribution": "internal"
     },
     "production": {
       "autoIncrement": true
