--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.1.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -22,6 +22,7 @@
     "expo": "~51.0.28",
     "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.26",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -37,11 +38,12 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-track-player": "^4.1.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "text-encoding-polyfill": "^0.6.7",
     "web-streams-polyfill": "^3.3.2",
-    "youtubei.js": "^10.4.0"
+    "youtubei.js": "^10.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
