--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@react-navigation/native": "^6.0.2",
     "base-64": "^1.0.0",
     "event-target-polyfill": "^0.0.4",
-    "expo": "~51.0.28",
+    "expo": "^51.0.34",
     "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
