Fix song change bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "lib": ["dom"],
     "strict": true,
     "paths": {
       "@/*": [
