--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.2.0",
   "scripts": {
     "start": "expo start",
-    "dev": "APP_VARIANT=development npx expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -26,6 +25,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "^0.27.6",
@@ -35,7 +35,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-awesome-slider": "^2.5.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-colors": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -44,6 +47,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "text-encoding-polyfill": "^0.6.7",
+    "ts-pattern": "^5.4.0",
     "web-streams-polyfill": "^3.3.2",
     "youtubei.js": "^10.5.0"
   },
