Add adding heart ability, and seed playlist func

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.8",
     "base-64": "^1.0.0",
     "event-target-polyfill": "^0.0.4",
-    "expo": "^51.0.36",
+    "expo": "^51.0.37",
     "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.27",
+    "expo-dev-client": "^4.0.28",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
@@ -46,6 +48,7 @@
     "react-native-track-player": "^4.1.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
     "text-encoding-polyfill": "^0.6.7",
     "ts-pattern": "^5.4.0",
     "web-streams-polyfill": "^3.3.2",
