--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.8",
     "base-64": "^1.0.0",
+    "color": "^4.2.3",
     "event-target-polyfill": "^0.0.4",
     "expo": "^51.0.37",
     "expo-av": "^14.0.7",
@@ -31,6 +32,7 @@
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
@@ -44,6 +46,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-colors": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -54,14 +57,14 @@
     "text-encoding-polyfill": "^0.6.7",
     "ts-pattern": "^5.4.0",
     "web-streams-polyfill": "^3.3.2",
-    "youtubei.js": "^10.5.0",
-    "expo-navigation-bar": "~3.0.7"
+    "youtubei.js": "^10.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-syntax-import-attributes": "^7.23.3",
     "@babel/plugin-transform-export-namespace-from": "^7.23.4",
     "@types/base-64": "^1.0.2",
+    "@types/color": "^3.0.6",
     "@types/react": "~18.2.45",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.1.2",
