--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
-    "@react-navigation/native": "^6.0.2",
-    "@reduxjs/toolkit": "^2.2.8",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/native": "^6.1.18",
+    "@reduxjs/toolkit": "^2.3.0",
     "base-64": "^1.0.0",
     "color": "^4.2.3",
     "event-target-polyfill": "^0.0.4",
@@ -29,7 +29,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.28",
     "expo-file-system": "^17.0.1",
-    "expo-font": "~12.0.9",
+    "expo-font": "^12.0.10",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.7",
@@ -38,37 +38,37 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-awesome-slider": "^2.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.74.5",
+    "react-native-awesome-slider": "^2.5.6",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-image-colors": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-track-player": "^4.1.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "^0.19.13",
     "react-redux": "^9.1.2",
     "text-encoding-polyfill": "^0.6.7",
-    "ts-pattern": "^5.4.0",
+    "ts-pattern": "^5.5.0",
     "web-streams-polyfill": "^3.3.2",
-    "youtubei.js": "^10.5.0"
+    "youtubei.js": "^11.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-syntax-import-attributes": "^7.23.3",
-    "@babel/plugin-transform-export-namespace-from": "^7.23.4",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-syntax-import-attributes": "^7.26.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@types/base-64": "^1.0.2",
-    "@types/color": "^3.0.6",
-    "@types/react": "~18.2.45",
-    "eslint": "^8.57.0",
+    "@types/color": "^4.2.0",
+    "@types/react": "^18.2.79",
+    "eslint": "^8.57.1",
     "eslint-config-expo": "^7.1.2",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
