--- a/package.json
+++ b/package.json
@@ -19,37 +19,37 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "base-64": "^1.0.0",
     "color": "^4.2.3",
     "event-target-polyfill": "^0.0.4",
-    "expo": "~51.0.38",
-    "expo-av": "^14.0.7",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "^4.0.28",
-    "expo-file-system": "^17.0.1",
-    "expo-font": "^12.0.10",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-navigation-bar": "~3.0.7",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "^0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "^0.74.5",
+    "expo": "^52.0.11",
+    "expo-av": "~15.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.4",
+    "expo-file-system": "~18.0.4",
+    "expo-font": "~13.0.1",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-navigation-bar": "~4.0.4",
+    "expo-router": "~4.0.9",
+    "expo-splash-screen": "~0.29.13",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.4",
+    "expo-web-browser": "~14.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-awesome-slider": "^2.5.6",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-image-colors": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-track-player": "^4.1.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
@@ -65,10 +65,29 @@
     "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@types/base-64": "^1.0.2",
     "@types/color": "^4.2.0",
-    "@types/react": "^18.2.79",
+    "@types/react": "~18.3.12",
     "eslint": "^8.57.1",
-    "eslint-config-expo": "^7.1.2",
+    "eslint-config-expo": "~8.0.1",
     "typescript": "^5.3.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-fast-image",
+          "react-native-track-player",
+          "@reduxjs/toolkit",
+          "base-64",
+          "color",
+          "event-target-polyfill",
+          "react-redux",
+          "text-encoding-polyfill",
+          "ts-pattern",
+          "web-streams-polyfill",
+          "youtubei.js"
+        ]
+      }
+    }
   },
   "private": true
 }
